--- a/Playwright/.net/TestProject/TestProject.csproj
+++ b/Playwright/.net/TestProject/TestProject.csproj
@@ -22,4 +22,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Playwright.xUnit\Playwright.xUnit.csproj" />
+  </ItemGroup>
+
 </Project>
